# szukiwarka

./: README.md
backend/: .gitignore  main.py  plain_matrix.npz  pyproject.toml
backend/database/: create_db.py  sites.db
backend/eng_help/: engine_init.py  funcs.py  word_list.pkl
frontend/: bun.lockb  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: NumberInput.js  SearchResults.js
