[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["grysj <jgrys17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.67.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
nltk = "^3.9.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
